--- a/templates/index1.html
+++ b/templates/index1.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html >
-<!--From https://codepen.io/frytyler/pen/EGdtg-->
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>ML Deploy</title>
-  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-  
+    <meta charset="UTF-8">
+    <title>ML Deploy</title>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
-
 <body>
- <div class="login">
-	<h1>Fraudulent Prediction for Credit Card Transactions</h1>
-     <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict') }}" method="post">
-	<label for="trans_date_trans_time">Trasaction Date & Time {eg. "2020-06-21 00:36:58"}: </label>
-    <input type="text" name="trans_date_trans_time" placeholder="Enter as given format" required />
-    <br/>
-	<label for="merchant">Merchant:</label>
-<select name="merchant" required>
-  <option value="other">Other</option>
+    <div class="container">
+        <h1>Fraudulent Prediction for Credit Card Transactions</h1>
+        <form action="{{ url_for('predict') }}" method="post">
+            <div class="form-group">
+                <div>
+                    <label>Transaction Date & Time:</label>
+                    <input type="text" name="trans_date_trans_time" placeholder="YYYY-MM-DD HH:MM:SS" required>
+                </div>
+                <div>
+                    <label>Merchant:</label>
+                    <select name="merchant" required>
+                          <option value="other">Other</option>
   <option value="fraud_Kilback LLC">fraud_Kilback LLC</option>
   <option value="fraud_Cormier LLC">fraud_Cormier LLC</option>
   <option value="fraud_Schumm PLC">fraud_Schumm PLC</option>
@@ -123,12 +123,15 @@
   <option value="fraud_Goldner, Kovacek and Abbott">fraud_Goldner, Kovacek and Abbott</option>
   <option value="fraud_Vandervort-Funk">fraud_Vandervort-Funk</option>
   <option value="fraud_Botsford PLC">fraud_Botsford PLC</option>
-</select>
 
+                    </select>
+                </div>
+            </div>
 
-    <br/>
-	<label for="category">Category:</label>
-<select name="category" required>
+            <div class="form-group">
+                <div>
+                    <label>Category:</label>
+                    <select name="category" required>
     <option value="other">Other</option>
     <option value="misc_net">misc_net</option>
     <option value="grocery_pos">grocery_pos</option>
@@ -144,20 +147,26 @@
     <option value="travel">travel</option>
     <option value="kids_pets">kids_pets</option>
     <option value="home">home</option>
-</select>
-    <br/>
-	<label for="amt">Amount(USD '$'): </label>
-    <input type="text" name="amt" placeholder="Enter Decimal" required />
-    <br/>
-	<label for="gender">Gender:</label>
-<select name="gender" required>
-    <option value="other">Other</option>
-    <option value="F">Female</option>
-    <option value="M">Male</option>
-</select>
-    <br/>
-	<label for="state">State:</label>
-<select name="state" required>
+					</select>
+                </div>
+                <div>
+                    <label>Amount (USD):</label>
+                    <input type="text" name="amt" placeholder="Enter amount" required>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div>
+                    <label>Gender:</label>
+                    <select name="gender" required>
+                        <option value="other">Other</option>
+                        <option value="F">Female</option>
+                        <option value="M">Male</option>
+                    </select>
+                </div>
+                <div>
+                    <label>State:</label>
+                    <select name="state" required>
     <option value="NC">North Carolina</option>
     <option value="WA">Washington</option>
     <option value="ID">Idaho</option>
@@ -209,22 +218,36 @@
     <option value="CT">Connecticut</option>
     <option value="RI">Rhode Island</option>
     <option value="DE">Delaware</option>
-</select>
-    <br/>
-	<label for="zip">ZIP Code:</label>
-    <input type="text" name="zip" placeholder="Enter Number" required />
-    <br/>
-	<label for="lat">Latitude:</label>
-    <input type="text" name="lat" placeholder="Enter Decimal" required />
-    <br/>
-	<label for="long">Longitude:</label>
-    <input type="text" name="long" placeholder="Enter Decimal" required />
-    <br/>
-	<label for="city_pop">City Population:</label>
-    <input type="text" name="city_pop" placeholder="Enter Number" required />
-    <br/>
-	<label for="job">Job:</label>
-<select name="job" required>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div>
+                    <label>ZIP Code:</label>
+                    <input type="text" name="zip" placeholder="Enter Number" required>
+                </div>
+                <div>
+                    <label>Latitude:</label>
+                    <input type="text" name="lat" placeholder="Enter Decimal" required>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div>
+                    <label>Longitude:</label>
+                    <input type="text" name="long" placeholder="Enter Decimal" required>
+                </div>
+                <div>
+                    <label>City Population:</label>
+                    <input type="text" name="city_pop" placeholder="Enter Number" required>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div>
+                    <label>Job:</label>
+                    <select name="job" required>
   <option value="other">Other</option>
   <option value="Exhibition designer">Exhibition designer</option>
   <option value="Designer, ceramics/pottery">Designer, ceramics/pottery</option>
@@ -427,35 +450,58 @@
   <option value="Doctor, general practice">Doctor, general practice</option>
   <option value="Nurse, children's">Nurse, children's</option>
   <option value="Waste management officer">Waste management officer</option>
-</select>
+					</select>
+                </div>
+                <div>
+                    <label>Date of Birth:</label>
+                    <input type="text" name="dob" placeholder="YYYY-MM-DD" required>
+                </div>
+            </div>
 
+            <div class="form-group">
+                <div>
+                    <label>Merchant Latitude:</label>
+                    <input type="text" name="merch_lat" placeholder="Enter Decimal" required>
+                </div>
+                <div>
+                    <label>Merchant Longitude:</label>
+                    <input type="text" name="merch_long" placeholder="Enter Decimal" required>
+                </div>
+            </div>
 
-    <br/>
-	<label for="dob">Date of Birth {eg. "1986-03-28"}:</label>
-    <input type="text" name="dob" placeholder="Enter as given format" required />
-    <br/>
-	<label for="merch_lat">Merchant Latitude:</label>
-    <input type="text" name="merch_lat" placeholder="Enter Decimal" required />
-    <br/>
-	<label for="merch_long">Merchant Longitude:</label>
-    <input type="text" name="merch_long" placeholder="Enter Decimal" required />
-    <br/>
-	<label for="merch_zipcode">Merchant ZIP Code:</label>
-    <input type="text" name="merch_zipcode" placeholder="Enter Number" required />
-    <br/>
-	<br/>
-	<label for="trans_count_per_day">Total Transactions in a Day:</label>
-    <input type="text" name="trans_count_per_day" placeholder="Enter Number" required />
-    <br/>
-    <button type="submit" class="btn btn-primary btn-block btn-large">Check for Anomaly</button>
-</form>
+            <div class="form-group">
+                <div>
+                    <label>Merchant ZIP Code:</label>
+                    <input type="text" name="merch_zipcode" placeholder="Enter Number" required>
+                </div>
+                <div>
+                    <label>Total Transactions in a Day:</label>
+                    <input type="text" name="trans_count_per_day" placeholder="Enter Number" required>
+                </div>
+            </div>
 
-   <br>
-   <br>
-   {{ prediction_text }}
+            <button type="submit" class="btn">Check for Anomaly</button>
+        </form>
+		
+		<div class="anomaly-score-container">
+			<h2>Anomaly Score:</h2> <!-- Title for the score -->
+			<div id="anomaly-score">0</div> <!-- This is where the animated score will be displayed -->
+			<div id="risk-level">Low Risk</div> <!-- This is where the risk level (Low, Medium, High) will be displayed -->
+		</div>
 
- </div>
+        <br>
+        <div>{{ prediction_text }}</div>
+    </div>
+    
+    <script src="{{ url_for('static', filename='animation.js') }}"></script>
+	<script>
+        var inputValue = {{ input_value | tojson }};
+		console.log(inputValue);
 
-
+        // If there's an input value, trigger the animation
+        if (inputValue !== null) {
+            animateScore(parseFloat(inputValue));
+        }
+    </script>
 </body>
 </html>
